# http-stream-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
http-stream-cli/: CMakeLists.txt
http-stream-cli/include/: http-stream-cli.h  utils.h
http-stream-cli/include/parser/: validator.h
http-stream-cli/include/source/: rand_source.h  source.h  xlsx_source.h
http-stream-cli/src/: http-stream-cli.cpp
